# pypkgconf

./: .gitignore  LICENSE.txt  build_libpkgconf.py.in  meson.build  pyproject.toml
pypkgconf/: __init__.py  flags.py  libpkgconf.py  meson.build
tests/: testpypkgconf.py
