[build-system]
build-backend = 'mesonpy'
requires = ['meson-python >= 0.13.2', 'cffi']

[project]
name = 'pypkgconf'
version = '0.1.0'
description = 'Python bindings to libpkgconf'
readme = 'README.md'
requires-python = '>=3.7'
license = {file = 'LICENSE.txt'}
authors = [
  {name = 'Charles Brunet', email = 'charles.brunet@optelgroup.com'},
]
dependencies = [
  'cffi',
]

[tool.meson-python.args]
install = ['--tags=runtime,python-runtime']
# install = ['--skip-subprojects']
